#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([docs-ja], [beta], [michio_matsuyama AT yahoo DOT co DOT jp])
AC_CONFIG_SRCDIR([ctie/ctie-k.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign -Wno-portability])
AM_MAINTAINER_MODE

m4_include([m4/progs.m4])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([malloc.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([strerror])

AC_CONFIG_FILES([
	Makefile
	ctie/Makefile
	src/Makefile
	src/_vendor/Makefile
	src/_vendor/github.com/Makefile
	src/_vendor/github.com/docker/Makefile
	src/_vendor/github.com/docker/buildx/Makefile
	src/_vendor/github.com/docker/buildx/docs/Makefile
	src/_vendor/github.com/docker/cli/Makefile
	src/_vendor/github.com/docker/cli/docs/Makefile
	src/_vendor/github.com/docker/cli/docs/extend/Makefile
	src/_vendor/github.com/docker/cli/docs/extend/images/Makefile
	src/_vendor/github.com/docker/cli/docs/reference/Makefile
	src/_vendor/github.com/docker/cli/docs/reference/commandline/Makefile
	src/_vendor/github.com/docker/compose/Makefile
	src/_vendor/github.com/docker/compose/v2/Makefile
	src/_vendor/github.com/docker/compose/v2/docs/Makefile
	src/_vendor/github.com/docker/compose/v2/docs/reference/Makefile
	src/_vendor/github.com/docker/scout-cli/Makefile
	src/_vendor/github.com/docker/scout-cli/docs/Makefile
	src/_vendor/github.com/moby/Makefile
	src/_vendor/github.com/moby/buildkit/Makefile
	src/_vendor/github.com/moby/buildkit/docs/Makefile
	src/_vendor/github.com/moby/buildkit/docs/attestations/Makefile
	src/_vendor/github.com/moby/buildkit/frontend/Makefile
	src/_vendor/github.com/moby/buildkit/frontend/dockerfile/Makefile
	src/_vendor/github.com/moby/buildkit/frontend/dockerfile/docs/Makefile
	src/_vendor/github.com/moby/buildkit/frontend/dockerfile/docs/rules/Makefile
	src/_vendor/github.com/moby/moby/Makefile
	src/_vendor/github.com/moby/moby/docs/Makefile
	src/_vendor/github.com/moby/moby/docs/api/Makefile
	src/assets/Makefile
	src/assets/css/Makefile
	src/assets/favicons/Makefile
	src/assets/images/Makefile
	src/assets/js/Makefile
	src/assets/js/src/Makefile
	src/assets/scss/Makefile
	src/content/Makefile
	src/content/admin/Makefile
	src/content/admin/company/Makefile
	src/content/admin/faqs/Makefile
	src/content/admin/images/Makefile
	src/content/admin/organization/Makefile
	src/content/billing/Makefile
	src/content/billing/core-billing/Makefile
	src/content/build/Makefile
	src/content/build/attestations/Makefile
	src/content/build/bake/Makefile
	src/content/build/builders/Makefile
	src/content/build/building/Makefile
	src/content/build/buildkit/Makefile
	src/content/build/cache/Makefile
	src/content/build/cache/backends/Makefile
	src/content/build/ci/Makefile
	src/content/build/ci/github-actions/Makefile
	src/content/build/ci/github-actions/images/Makefile
	src/content/build/ci/images/Makefile
	src/content/build/dockerfile/Makefile
	src/content/build/drivers/Makefile
	src/content/build/exporters/Makefile
	src/content/build/guide/Makefile
	src/content/build/guide/images/Makefile
	src/content/build/images/Makefile
	src/content/build-cloud/Makefile
	src/content/cloud/Makefile
	src/content/compose/Makefile
	src/content/compose/bridge/Makefile
	src/content/compose/compose-file/Makefile
	src/content/compose/environment-variables/Makefile
	src/content/compose/images/Makefile
	src/content/compose/install/Makefile
	src/content/compose/intro/Makefile
	src/content/compose/multiple-compose-files/Makefile
	src/content/compose/reference/Makefile
	src/content/config/Makefile
	src/content/config/containers/Makefile
	src/content/config/containers/logging/Makefile
	src/content/config/daemon/Makefile
	src/content/config/daemon/images/Makefile
	src/content/contribute/Makefile
	src/content/contribute/components/Makefile
	src/content/contribute/style/Makefile
	src/content/copilot/Makefile
	src/content/desktop/Makefile
	src/content/desktop/dev-environments/Makefile
	src/content/desktop/enterprise/Makefile
	src/content/desktop/extensions/Makefile
	src/content/desktop/extensions-sdk/Makefile
	src/content/desktop/extensions-sdk/architecture/Makefile
	src/content/desktop/extensions-sdk/architecture/images/Makefile
	src/content/desktop/extensions-sdk/build/Makefile
	src/content/desktop/extensions-sdk/build/images/Makefile
	src/content/desktop/extensions-sdk/design/Makefile
	src/content/desktop/extensions-sdk/design/images/Makefile
	src/content/desktop/extensions-sdk/dev/Makefile
	src/content/desktop/extensions-sdk/dev/api/Makefile
	src/content/desktop/extensions-sdk/dev/api/reference/Makefile
	src/content/desktop/extensions-sdk/dev/api/reference/interfaces/Makefile
	src/content/desktop/extensions-sdk/extensions/Makefile
	src/content/desktop/extensions-sdk/extensions/images/Makefile
	src/content/desktop/extensions-sdk/guides/Makefile
	src/content/desktop/extensions-sdk/guides/images/Makefile
	src/content/desktop/faqs/Makefile
	src/content/desktop/hardened-desktop/Makefile
	src/content/desktop/hardened-desktop/enhanced-container-isolation/Makefile
	src/content/desktop/hardened-desktop/settings-management/Makefile
	src/content/desktop/images/Makefile
	src/content/desktop/install/Makefile
	src/content/desktop/install/images/Makefile
	src/content/desktop/linux/Makefile
	src/content/desktop/linux/images/Makefile
	src/content/desktop/linux/images/menu/Makefile
	src/content/desktop/mac/Makefile
	src/content/desktop/mac/images/Makefile
	src/content/desktop/mac/images/menu/Makefile
	src/content/desktop/previous-versions/Makefile
	src/content/desktop/settings/Makefile
	src/content/desktop/troubleshoot/Makefile
	src/content/desktop/use-desktop/Makefile
	src/content/desktop/windows/Makefile
	src/content/desktop/windows/images/Makefile
	src/content/desktop/wsl/Makefile
	src/content/docker-hub/Makefile
	src/content/docker-hub/api/Makefile
	src/content/docker-hub/builds/Makefile
	src/content/docker-hub/builds/images/Makefile
	src/content/docker-hub/images/Makefile
	src/content/docker-hub/repos/Makefile
	src/content/docker-id/Makefile
	src/content/engine/Makefile
	src/content/engine/api/Makefile
	src/content/engine/api/latest/Makefile
	src/content/engine/api/sdk/Makefile
	src/content/engine/context/Makefile
	src/content/engine/install/Makefile
	src/content/engine/release-notes/Makefile
	src/content/engine/security/Makefile
	src/content/engine/security/https/Makefile
	src/content/engine/security/trust/Makefile
	src/content/engine/security/trust/images/Makefile
	src/content/engine/swarm/Makefile
	src/content/engine/swarm/how-swarm-mode-works/Makefile
	src/content/engine/swarm/images/Makefile
	src/content/engine/swarm/swarm-tutorial/Makefile
	src/content/engine/tutorials/Makefile
	src/content/guides/Makefile
	src/content/guides/deployment-orchestration/Makefile
	src/content/guides/docker-concepts/Makefile
	src/content/guides/docker-concepts/building-images/Makefile
	src/content/guides/docker-concepts/building-images/images/Makefile
	src/content/guides/docker-concepts/running-containers/Makefile
	src/content/guides/docker-concepts/running-containers/images/Makefile
	src/content/guides/docker-concepts/the-basics/Makefile
	src/content/guides/docker-concepts/the-basics/images/Makefile
	src/content/guides/getting-started/Makefile
	src/content/guides/getting-started/images/Makefile
	src/content/guides/images/Makefile
	src/content/guides/use-case/Makefile
	src/content/guides/use-case/genai-pdf-bot/Makefile
	src/content/guides/use-case/genai-video-bot/Makefile
	src/content/guides/use-case/genai-video-bot/images/Makefile
	src/content/guides/use-case/images/Makefile
	src/content/guides/use-case/nlp/Makefile
	src/content/guides/workshop/Makefile
	src/content/guides/workshop/images/Makefile
	src/content/includes/Makefile
	src/content/includes/compose/Makefile
	src/content/language/Makefile
	src/content/language/cpp/Makefile
	src/content/language/dotnet/Makefile
	src/content/language/golang/Makefile
	src/content/language/images/Makefile
	src/content/language/java/Makefile
	src/content/language/java/images/Makefile
	src/content/language/nodejs/Makefile
	src/content/language/php/Makefile
	src/content/language/python/Makefile
	src/content/language/r/Makefile
	src/content/language/rust/Makefile
	src/content/network/Makefile
	src/content/network/drivers/Makefile
	src/content/network/drivers/images/Makefile
	src/content/reference/Makefile
	src/content/reference/cli/Makefile
	src/content/reference/cli/docker/Makefile
	src/content/reference/cli/docker/builder/Makefile
	src/content/reference/cli/docker/buildx/Makefile
	src/content/reference/cli/docker/buildx/debug/Makefile
	src/content/reference/cli/docker/buildx/imagetools/Makefile
	src/content/reference/cli/docker/checkpoint/Makefile
	src/content/reference/cli/docker/compose/Makefile
	src/content/reference/cli/docker/compose/alpha/Makefile
	src/content/reference/cli/docker/config/Makefile
	src/content/reference/cli/docker/container/Makefile
	src/content/reference/cli/docker/context/Makefile
	src/content/reference/cli/docker/image/Makefile
	src/content/reference/cli/docker/manifest/Makefile
	src/content/reference/cli/docker/network/Makefile
	src/content/reference/cli/docker/node/Makefile
	src/content/reference/cli/docker/plugin/Makefile
	src/content/reference/cli/docker/scout/Makefile
	src/content/reference/cli/docker/scout/attestation/Makefile
	src/content/reference/cli/docker/scout/cache/Makefile
	src/content/reference/cli/docker/scout/integration/Makefile
	src/content/reference/cli/docker/scout/repo/Makefile
	src/content/reference/cli/docker/secret/Makefile
	src/content/reference/cli/docker/service/Makefile
	src/content/reference/cli/docker/stack/Makefile
	src/content/reference/cli/docker/swarm/Makefile
	src/content/reference/cli/docker/system/Makefile
	src/content/reference/cli/docker/trust/Makefile
	src/content/reference/cli/docker/trust/key/Makefile
	src/content/reference/cli/docker/trust/signer/Makefile
	src/content/reference/cli/docker/volume/Makefile
	src/content/samples/Makefile
	src/content/scout/Makefile
	src/content/scout/concepts/Makefile
	src/content/scout/deep-dive/Makefile
	src/content/scout/explore/Makefile
	src/content/scout/guides/Makefile
	src/content/scout/how-tos/Makefile
	src/content/scout/images/Makefile
	src/content/scout/images/release-notes/Makefile
	src/content/scout/integrations/Makefile
	src/content/scout/integrations/ci/Makefile
	src/content/scout/integrations/code-quality/Makefile
	src/content/scout/integrations/environment/Makefile
	src/content/scout/integrations/registry/Makefile
	src/content/scout/integrations/source-code-management/Makefile
	src/content/scout/integrations/team-collaboration/Makefile
	src/content/scout/policy/Makefile
	src/content/scout/release-notes/Makefile
	src/content/security/Makefile
	src/content/security/faqs/Makefile
	src/content/security/faqs/single-sign-on/Makefile
	src/content/security/for-admins/Makefile
	src/content/security/for-admins/provisioning/Makefile
	src/content/security/for-admins/single-sign-on/Makefile
	src/content/security/for-admins/single-sign-on/configure/Makefile
	src/content/security/for-admins/single-sign-on/connect/Makefile
	src/content/security/for-admins/single-sign-on/images/Makefile
	src/content/security/for-admins/single-sign-on/manage/Makefile
	src/content/security/for-developers/Makefile
	src/content/security/for-developers/2fa/Makefile
	src/content/security/images/Makefile
	src/content/storage/Makefile
	src/content/storage/images/Makefile
	src/content/storage/storagedriver/Makefile
	src/content/storage/storagedriver/images/Makefile
	src/content/subscription/Makefile
	src/content/subscription/build-cloud/Makefile
	src/content/subscription/core-subscription/Makefile
	src/content/subscription/images/Makefile
	src/content/tags/Makefile
	src/content/tags/best-practices/Makefile
	src/content/tags/faq/Makefile
	src/content/tags/release-notes/Makefile
	src/content/tags/secrets/Makefile
	src/content/tags/troubleshooting/Makefile
	src/content/trusted-content/Makefile
	src/content/trusted-content/images/Makefile
	src/content/trusted-content/official-images/Makefile
	src/data/Makefile
	src/data/buildx/Makefile
	src/data/debug-cli/Makefile
	src/data/docsarchive/Makefile
	src/data/engine-cli/Makefile
	src/data/init-cli/Makefile
	src/i18n/Makefile
	src/layouts/Makefile
	src/layouts/_default/Makefile
	src/layouts/_default/_markup/Makefile
	src/layouts/guides/Makefile
	src/layouts/partials/Makefile
	src/layouts/partials/components/Makefile
	src/layouts/partials/utils/Makefile
	src/layouts/samples/Makefile
	src/layouts/shortcodes/Makefile
	src/layouts/tag/Makefile
])
AC_OUTPUT
