#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([docs-ja], [beta], [michio_matsuyama AT yahoo DOT co DOT jp])
AC_CONFIG_SRCDIR([ctie/ctie-k.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign -Wno-portability])
AM_MAINTAINER_MODE

m4_include([m4/progs.m4])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([malloc.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([strerror])

AC_CONFIG_FILES([
	Makefile
	ctie/Makefile
	src/Makefile
	src/_vendor/Makefile
	src/_vendor/github.com/Makefile
	src/_vendor/github.com/docker/Makefile
	src/_vendor/github.com/docker/buildx/Makefile
	src/_vendor/github.com/docker/buildx/docs/Makefile
	src/_vendor/github.com/docker/cli/Makefile
	src/_vendor/github.com/docker/cli/docs/Makefile
	src/_vendor/github.com/docker/cli/docs/extend/Makefile
	src/_vendor/github.com/docker/cli/docs/extend/images/Makefile
	src/_vendor/github.com/docker/cli/docs/reference/Makefile
	src/_vendor/github.com/docker/compose/Makefile
	src/_vendor/github.com/docker/compose/v5/Makefile
	src/_vendor/github.com/docker/compose/v5/docs/Makefile
	src/_vendor/github.com/docker/compose/v5/docs/reference/Makefile
	src/_vendor/github.com/docker/mcp-gateway/Makefile
	src/_vendor/github.com/docker/mcp-gateway/docs/Makefile
	src/_vendor/github.com/docker/mcp-gateway/docs/generator/Makefile
	src/_vendor/github.com/docker/mcp-gateway/docs/generator/reference/Makefile
	src/_vendor/github.com/docker/model-runner/Makefile
	src/_vendor/github.com/docker/model-runner/cmd/Makefile
	src/_vendor/github.com/docker/model-runner/cmd/cli/Makefile
	src/_vendor/github.com/docker/model-runner/cmd/cli/docs/Makefile
	src/_vendor/github.com/docker/model-runner/cmd/cli/docs/reference/Makefile
	src/_vendor/github.com/docker/scout-cli/Makefile
	src/_vendor/github.com/docker/scout-cli/docs/Makefile
	src/_vendor/github.com/moby/Makefile
	src/_vendor/github.com/moby/buildkit/Makefile
	src/_vendor/github.com/moby/buildkit/docs/Makefile
	src/_vendor/github.com/moby/buildkit/docs/attestations/Makefile
	src/_vendor/github.com/moby/buildkit/frontend/Makefile
	src/_vendor/github.com/moby/buildkit/frontend/dockerfile/Makefile
	src/_vendor/github.com/moby/buildkit/frontend/dockerfile/docs/Makefile
	src/_vendor/github.com/moby/buildkit/frontend/dockerfile/docs/rules/Makefile
	src/_vendor/github.com/moby/moby/Makefile
	src/_vendor/github.com/moby/moby/api/Makefile
	src/_vendor/github.com/moby/moby/api/docs//Makefile
	src/assets/Makefile
	src/assets/css/Makefile
	src/assets/icons/Makefile
	src/assets/images/Makefile
	src/assets/images/guides/Makefile
	src/assets/images/learning-paths/Makefile
	src/assets/js/Makefile
	src/assets/js/src/Makefile
	src/assets/theme/Makefile
	src/assets/theme/icons/Makefile
	src/content/Makefile
	src/content/contribute/Makefile
	src/content/contribute/components/Makefile
	src/content/contribute/style/Makefile
	src/content/get-started/Makefile
	src/content/get-started/docker-concepts/Makefile
	src/content/get-started/docker-concepts/building-images/Makefile
	src/content/get-started/docker-concepts/building-images/images/Makefile
	src/content/get-started/docker-concepts/running-containers/Makefile
	src/content/get-started/docker-concepts/running-containers/images/Makefile
	src/content/get-started/docker-concepts/the-basics/Makefile
	src/content/get-started/docker-concepts/the-basics/images/Makefile
	src/content/get-started/images/Makefile
	src/content/get-started/introduction/Makefile
	src/content/get-started/introduction/images/Makefile
	src/content/get-started/workshop/Makefile
	src/content/get-started/workshop/images/Makefile
	src/content/guides/Makefile
	src/content/guides/admin-set-up/Makefile
	src/content/guides/admin-user-management/Makefile
	src/content/guides/angular/Makefile
	src/content/guides/bake/Makefile
	src/content/guides/bun/Makefile
	src/content/guides/compose-bake/Makefile
	src/content/guides/cpp/Makefile
	src/content/guides/deno/Makefile
	src/content/guides/docker-build-cloud/Makefile
	src/content/guides/docker-compose/Makefile
	src/content/guides/docker-scout/Makefile
	src/content/guides/dotnet/Makefile
	src/content/guides/frameworks/Makefile
	src/content/guides/frameworks/laravel/Makefile
	src/content/guides/genai-claude-code-mcp/Makefile
	src/content/guides/genai-claude-code-mcp/Images/Makefile
	src/content/guides/genai-leveraging-rag/Makefile
	src/content/guides/genai-pdf-bot/Makefile
	src/content/guides/genai-video-bot/Makefile
	src/content/guides/genai-video-bot/images/Makefile
	src/content/guides/github-sonarqube-sandbox/Makefile
	src/content/guides/golang/Makefile
	src/content/guides/go-prometheus-monitoring/Makefile
	src/content/guides/images/Makefile
	src/content/guides/java/Makefile
	src/content/guides/java/images/Makefile
	src/content/guides/nodejs/Makefile
	src/content/guides/php/Makefile
	src/content/guides/python/Makefile
	src/content/guides/r/Makefile
	src/content/guides/rag-ollama/Makefile
	src/content/guides/ruby/Makefile
	src/content/guides/rust/Makefile
	src/content/guides/testcontainers-cloud/Makefile
	src/content/guides/vuejs/Makefile
	src/content/guides/zscaler/Makefile
	src/content/includes/Makefile
	src/content/includes/compose/Makefile
	src/content/languages/Makefile
	src/content/languages/c-sharp/Makefile
	src/content/languages/cpp/Makefile
	src/content/languages/go/Makefile
	src/content/languages/java/Makefile
	src/content/languages/js/Makefile
	src/content/languages/php/Makefile
	src/content/languages/python/Makefile
	src/content/languages/r/Makefile
	src/content/languages/ruby/Makefile
	src/content/languages/rust/Makefile
	src/content/manuals/Makefile
	src/content/manuals/accounts/Makefile
	src/content/manuals/admin/Makefile
	src/content/manuals/admin/company/Makefile
	src/content/manuals/admin/faqs/Makefile
	src/content/manuals/admin/images/Makefile
	src/content/manuals/admin/organization/Makefile
	src/content/manuals/ai/Makefile
	src/content/manuals/ai/cagent/Makefile
	src/content/manuals/ai/compose/Makefile
	src/content/manuals/ai/gordon/Makefile
	src/content/manuals/ai/gordon/images/Makefile
	src/content/manuals/ai/gordon/mcp/Makefile
	src/content/manuals/ai/mcp-catalog-and-toolkit/Makefile
	src/content/manuals/ai/mcp-catalog-and-toolkit/images/Makefile
	src/content/manuals/ai/model-runner/Makefile
	src/content/manuals/ai/model-runner/images/Makefile
	src/content/manuals/ai/sandboxes/Makefile
	src/content/manuals/billing/Makefile
	src/content/manuals/build/Makefile
	src/content/manuals/build/bake/Makefile
	src/content/manuals/build/builders/Makefile
	src/content/manuals/build/builders/drivers/Makefile
	src/content/manuals/build/building/Makefile
	src/content/manuals/build/buildkit/Makefile
	src/content/manuals/build/cache/Makefile
	src/content/manuals/build/cache/backends/Makefile
	src/content/manuals/build/ci/Makefile
	src/content/manuals/build/ci/github-actions/Makefile
	src/content/manuals/build/ci/github-actions/images/Makefile
	src/content/manuals/build/ci/images/Makefile
	src/content/manuals/build/concepts/Makefile
	src/content/manuals/build/debug/Makefile
	src/content/manuals/build/exporters/Makefile
	src/content/manuals/build/images/Makefile
	src/content/manuals/build/metadata/Makefile
	src/content/manuals/build/metadata/attestations/Makefile
	src/content/manuals/build-cloud/Makefile
	src/content/manuals/compose/Makefile
	src/content/manuals/compose/bridge/Makefile
	src/content/manuals/compose/how-tos/Makefile
	src/content/manuals/compose/how-tos/environment-variables/Makefile
	src/content/manuals/compose/how-tos/multiple-compose-files/Makefile
	src/content/manuals/compose/images/Makefile
	src/content/manuals/compose/install/Makefile
	src/content/manuals/compose/intro/Makefile
	src/content/manuals/compose/releases/Makefile
	src/content/manuals/compose/support-and-feedback/Makefile
	src/content/manuals/desktop/Makefile
	src/content/manuals/desktop/enterprise/Makefile
	src/content/manuals/desktop/features/Makefile
	src/content/manuals/desktop/features/networking/Makefile
	src/content/manuals/desktop/features/wsl/Makefile
	src/content/manuals/desktop/images/Makefile
	src/content/manuals/desktop/previous-versions/Makefile
	src/content/manuals/desktop/settings-and-maintenance/Makefile
	src/content/manuals/desktop/setup/Makefile
	src/content/manuals/desktop/setup/install/Makefile
	src/content/manuals/desktop/setup/install/images/Makefile
	src/content/manuals/desktop/setup/install/linux/Makefile
	src/content/manuals/desktop/troubleshoot-and-support/Makefile
	src/content/manuals/desktop/troubleshoot-and-support/faqs/Makefile
	src/content/manuals/desktop/troubleshoot-and-support/troubleshoot/Makefile
	src/content/manuals/desktop/use-desktop/Makefile
	src/content/manuals/dhi/Makefile
	src/content/manuals/dhi/about/Makefile
	src/content/manuals/dhi/core-concepts/Makefile
	src/content/manuals/dhi/features/Makefile
	src/content/manuals/dhi/how-to/Makefile
	src/content/manuals/dhi/images/Makefile
	src/content/manuals/docker-hub/Makefile
	src/content/manuals/docker-hub/images/Makefile
	src/content/manuals/docker-hub/image-library/Makefile
	src/content/manuals/docker-hub/repos/Makefile
	src/content/manuals/docker-hub/repos/images/Makefile
	src/content/manuals/docker-hub/repos/manage/Makefile
	src/content/manuals/docker-hub/repos/manage/builds/Makefile
	src/content/manuals/docker-hub/repos/manage/builds/images/Makefile
	src/content/manuals/docker-hub/repos/manage/hub-images/Makefile
	src/content/manuals/docker-hub/repos/manage/hub-images/images/Makefile
	src/content/manuals/docker-hub/repos/manage/trusted-content/Makefile
	src/content/manuals/docker-hub/repos/manage/trusted-content/images/Makefile
	src/content/manuals/docker-hub/repos/manage/images/Makefile
	src/content/manuals/docker-hub/usage/Makefile
	src/content/manuals/enterprise/Makefile
	src/content/manuals/enterprise/enterprise-deployment/Makefile
	src/content/manuals/enterprise/security/Makefile
	src/content/manuals/enterprise/security/enforce-sign-in/Makefile
	src/content/manuals/enterprise/security/hardened-desktop/Makefile
	src/content/manuals/enterprise/security/hardened-desktop/enhanced-container-isolation/Makefile
	src/content/manuals/enterprise/security/hardened-desktop/settings-management/Makefile
	src/content/manuals/enterprise/security/images/Makefile
	src/content/manuals/enterprise/security/provisioning/Makefile
	src/content/manuals/enterprise/security/roles-and-permissions/Makefile
	src/content/manuals/enterprise/security/single-sign-on/Makefile
	src/content/manuals/enterprise/security/single-sign-on/FAQs/Makefile
	src/content/manuals/enterprise/security/single-sign-on/images/Makefile
	src/content/manuals/enterprise/troubleshoot/Makefile
	src/content/manuals/engine/Makefile
	src/content/manuals/engine/cli/Makefile
	src/content/manuals/engine/containers/Makefile
	src/content/manuals/engine/daemon/Makefile
	src/content/manuals/engine/daemon/images/Makefile
	src/content/manuals/engine/install/Makefile
	src/content/manuals/engine/logging/Makefile
	src/content/manuals/engine/logging/drivers/Makefile
	src/content/manuals/engine/manage-resources/Makefile
	src/content/manuals/engine/network/Makefile
	src/content/manuals/engine/network/drivers/Makefile
	src/content/manuals/engine/network/drivers/images/Makefile
	src/content/manuals/engine/release-notes/Makefile
	src/content/manuals/engine/security/Makefile
	src/content/manuals/engine/security/https/Makefile
	src/content/manuals/engine/security/rootless/Makefile
	src/content/manuals/engine/security/trust/Makefile
	src/content/manuals/engine/security/trust/images/Makefile
	src/content/manuals/engine/storage/Makefile
	src/content/manuals/engine/storage/drivers/Makefile
	src/content/manuals/engine/storage/drivers/images/Makefile
	src/content/manuals/engine/storage/images/Makefile
	src/content/manuals/engine/swarm/Makefile
	src/content/manuals/engine/swarm/how-swarm-mode-works/Makefile
	src/content/manuals/engine/swarm/images/Makefile
	src/content/manuals/engine/swarm/swarm-tutorial/Makefile
	src/content/manuals/extensions/Makefile
	src/content/manuals/extensions/extensions-sdk/Makefile
	src/content/manuals/extensions/extensions-sdk/architecture/Makefile
	src/content/manuals/extensions/extensions-sdk/architecture/images/Makefile
	src/content/manuals/extensions/extensions-sdk/build/Makefile
	src/content/manuals/extensions/extensions-sdk/build/images/Makefile
	src/content/manuals/extensions/extensions-sdk/design/Makefile
	src/content/manuals/extensions/extensions-sdk/design/images/Makefile
	src/content/manuals/extensions/extensions-sdk/dev/Makefile
	src/content/manuals/extensions/extensions-sdk/dev/api/Makefile
	src/content/manuals/extensions/extensions-sdk/extensions/Makefile
	src/content/manuals/extensions/extensions-sdk/extensions/images/Makefile
	src/content/manuals/extensions/extensions-sdk/guides/Makefile
	src/content/manuals/extensions/extensions-sdk/guides/images/Makefile
	src/content/manuals/offload/Makefile
	src/content/manuals/offload/images/Makefile
	src/content/manuals/scout/Makefile
	src/content/manuals/scout/deep-dive/Makefile
	src/content/manuals/scout/explore/Makefile
	src/content/manuals/scout/how-tos/Makefile
	src/content/manuals/scout/images/Makefile
	src/content/manuals/scout/images/release-notes/Makefile
	src/content/manuals/scout/integrations/Makefile
	src/content/manuals/scout/integrations/ci/Makefile
	src/content/manuals/scout/integrations/code-quality/Makefile
	src/content/manuals/scout/integrations/environment/Makefile
	src/content/manuals/scout/integrations/registry/Makefile
	src/content/manuals/scout/integrations/source-code-management/Makefile
	src/content/manuals/scout/integrations/team-collaboration/Makefile
	src/content/manuals/scout/policy/Makefile
	src/content/manuals/scout/release-notes/Makefile
	src/content/manuals/security/Makefile
	src/content/manuals/security/2fa/Makefile
	src/content/manuals/security/faqs/Makefile
	src/content/manuals/subscription/Makefile
	src/content/manuals/support/Makefile
	src/content/manuals/unassociated-machines/Makefile
	src/content/reference/Makefile
	src/content/reference/api/Makefile
	src/content/reference/api/dvp/Makefile
	src/content/reference/api/engine/Makefile
	src/content/reference/api/engine/sdk/Makefile
	src/content/reference/api/engine/version/Makefile
	src/content/reference/api/extensions-sdk/Makefile
	src/content/reference/api/hub/Makefile
	src/content/reference/api/registry/Makefile
	src/content/reference/api/registry/images/Makefile
	src/content/reference/cli/Makefile
	src/content/reference/cli/docker/Makefile
	src/content/reference/cli/docker/builder/Makefile
	src/content/reference/cli/docker/buildx/Makefile
	src/content/reference/cli/docker/buildx/debug/Makefile
	src/content/reference/cli/docker/buildx/history/Makefile
	src/content/reference/cli/docker/buildx/history/inspect/Makefile
	src/content/reference/cli/docker/buildx/imagetools/Makefile
	src/content/reference/cli/docker/checkpoint/Makefile
	src/content/reference/cli/docker/compose/Makefile
	src/content/reference/cli/docker/compose/alpha/Makefile
	src/content/reference/cli/docker/config/Makefile
	src/content/reference/cli/docker/container/Makefile
	src/content/reference/cli/docker/context/Makefile
	src/content/reference/cli/docker/desktop/Makefile
	src/content/reference/cli/docker/desktop/disable/Makefile
	src/content/reference/cli/docker/desktop/enable/Makefile
	src/content/reference/cli/docker/desktop/engine/Makefile
	src/content/reference/cli/docker/image/Makefile
	src/content/reference/cli/docker/manifest/Makefile
	src/content/reference/cli/docker/mcp/Makefile
 	src/content/reference/cli/docker/mcp/catalog/Makefile
 	src/content/reference/cli/docker/mcp/client/Makefile
 	src/content/reference/cli/docker/mcp/config/Makefile
 	src/content/reference/cli/docker/mcp/feature/Makefile
 	src/content/reference/cli/docker/mcp/gateway/Makefile
 	src/content/reference/cli/docker/mcp/oauth/Makefile
 	src/content/reference/cli/docker/mcp/policy/Makefile
 	src/content/reference/cli/docker/mcp/secrets/Makefile
 	src/content/reference/cli/docker/mcp/server/Makefile
 	src/content/reference/cli/docker/mcp/tools/Makefile
	src/content/reference/cli/docker/model/Makefile
	src/content/reference/cli/docker/network/Makefile
	src/content/reference/cli/docker/node/Makefile
	src/content/reference/cli/docker/offload/Makefile
	src/content/reference/cli/docker/pass/Makefile
	src/content/reference/cli/docker/plugin/Makefile
	src/content/reference/cli/docker/sandbox/Makefile
	src/content/reference/cli/docker/scout/Makefile
	src/content/reference/cli/docker/scout/attestation/Makefile
	src/content/reference/cli/docker/scout/cache/Makefile
	src/content/reference/cli/docker/scout/integration/Makefile
	src/content/reference/cli/docker/scout/repo/Makefile
	src/content/reference/cli/docker/scout/vex/Makefile
	src/content/reference/cli/docker/secret/Makefile
	src/content/reference/cli/docker/service/Makefile
	src/content/reference/cli/docker/stack/Makefile
	src/content/reference/cli/docker/swarm/Makefile
	src/content/reference/cli/docker/system/Makefile
	src/content/reference/cli/docker/trust/Makefile
	src/content/reference/cli/docker/trust/key/Makefile
	src/content/reference/cli/docker/trust/signer/Makefile
	src/content/reference/cli/docker/volume/Makefile
	src/content/reference/compose-file/Makefile
	src/content/reference/samples/Makefile
	src/content/tags/Makefile
	src/content/tags/admin/Makefile
	src/content/tags/ai/Makefile
	src/content/tags/app-dev/Makefile
	src/content/tags/best-practices/Makefile
	src/content/tags/cloud-services/Makefile
	src/content/tags/databases/Makefile
	src/content/tags/data-science/Makefile
	src/content/tags/deploy/Makefile
	src/content/tags/devops/Makefile
	src/content/tags/distributed-systems/Makefile
	src/content/tags/faq/Makefile
	src/content/tags/frameworks/Makefile
	src/content/tags/networking/Makefile
	src/content/tags/observability/Makefile
	src/content/tags/product-demo/Makefile
	src/content/tags/release-notes/Makefile
	src/content/tags/secrets/Makefile
	src/content/tags/troubleshooting/Makefile
	src/data/Makefile
	src/data/buildx/Makefile
	src/data/debug-cli/Makefile
	src/data/desktop-cli/Makefile
	src/data/docsarchive/Makefile
	src/data/engine-cli/Makefile
	src/data/init-cli/Makefile
	src/data/offload-cli/Makefile
	src/data/sandbox-cli/Makefile
	src/data/secrets-engine/Makefile
	src/i18n/Makefile
	src/layouts/Makefile
	src/layouts/_default/Makefile
	src/layouts/_default/_markup/Makefile
	src/layouts/desktop-release/Makefile
	src/layouts/guides/Makefile
	src/layouts/partials/Makefile
	src/layouts/partials/admonitions/Makefile
	src/layouts/partials/admonitions/icons/Makefile
	src/layouts/partials/components/Makefile
	src/layouts/partials/sidebar/Makefile
	src/layouts/partials/utils/Makefile
	src/layouts/samples/Makefile
	src/layouts/security-announcements/Makefile
	src/layouts/shortcodes/Makefile
	src/layouts/tag/Makefile
	src/static/Makefile
])
AC_OUTPUT
