##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = accounts admin billing build build-cloud cloud compose      \
	config contribute copilot desktop docker-id docker-hub engine \
	guides includes language network reference samples scout      \
	security storage subscription tags trusted-content

bases = \
	_index.md            \
	get-docker.md        \
	glossary.md          \
	manuals.md           \
	registry.md          \
	release-lifecycle.md \
	support.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
