##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = accounts admin billing build build-cloud cloud compose \
	contribute copilot desktop docker-hub engine extensions  \
	get-started guides includes language learning-paths      \
	reference run-cloud samples scout security subscription  \
	tags trusted-content

bases = \
	_index.md            \
	manuals.md           \
	registry.md          \
	release-lifecycle.md \
	support.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
