##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = contribute get-started guides includes languages \
	levels manuals products reference samples subjects tags

bases = \
	_index.md \
	search.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
