##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = buildx debug-cli desktop-cli docsarchive engine-cli init-cli \
	offload-cli sandbox-cli secrets-engine

bases = \
	desktop_release.yaml        \
	frontmatter.yaml            \
	redirects.yml               \
	samples.yaml                \
	security_announcements.yaml \
	summary.yaml

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
