##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = cli docsarchive sbx_cli

bases = \
	desktop_release.yaml \
	frontmatter.yaml     \
	languages.yaml       \
	redirects.yml        \
	samples.yaml         \
	summary.yaml         \
	tags.yaml

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
